# typily

./: LICENSE  README.md  example.py  pyproject.toml
typily/: __main__.py  builtin_types.py  compatibility.py  validator.py
