[tool.poetry]
name = "typily"
version = "0.1.0"
description = "A static type checker for python."
authors = ["GrandMoff100 <nlarsen23.student@gmail.com>"]
license = "GPLv3-or-later"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
astpretty = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
